# good_project

./: .cproject  .project  CMakeLists.txt  Character.h  Event.cpp  EventSystem.h  IEventHandler.cpp  IEventHandler.h  IObject.cpp  MovableObject.cpp  ObjectFactory.h  ObjectMovementHandler.h  README.md  graph.txt
src/: Character.cpp  Event.h  EventSystem.cpp  GraphicsComponent.cpp  GraphicsComponent.h  GraphicsText.cpp  GraphicsText.h  IObject.h  MovableObject.h  ObjectFactory.cpp  ObjectMovementHandler.cpp  main.cpp
